deployment/4_services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clamav-rest
  labels:
    app: clamav-rest
spec:
  ports:
  - name: clamav-rest
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: clamav-rest
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: clamav-api
  labels:
    app: clamav
spec:
  ports:
  - name: clamav-api
    port: 3310
    protocol: TCP
    targetPort: 3310
  selector:
    app: clamav
  type: ClusterIP
